Bug 1335235: Add disabling of the COM BSTR cache to mscom::MainThreadRuntime; r=jimm

MozReview-Commit-ID: 5RQvHiBoD2B